[package]
name = "rcudnn-sys"
description = "FFI bindings to cuDNN"
version = "0.5.0"
edition = "2018"
authors = [
    "Bernhard Schuster <bernhard@ahoi.io>",
    "Maximilian Goisser"
]
repository = "https://github.com/spearow/juice"
homepage = "https://github.com/spearow/juice/tree/master/rcudnn/cublas-sys"
keywords = ["cudnn", "cuda", "nvidia", "sys"]
license = "MIT OR Apache-2.0"
links = "cudnn"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = { version = "0.58", optional = true }

[features]
default = []
generate = ["bindgen"]
