[package]
name = "rcudnn"
description = "safe Rust wrapper for CUDA's cuDNN"
version = "1.7.0"
#edition = "2018"
authors = [
    "Bernhard Schuster <bernhard@ahoi.io>",
    "MichaelHirn <mj@autumnai.com>",
    "Maximilian Goisser <max@autumnai.com>"
]
repository = "https://github.com/spearow/juice"
homepage = "https://github.com/spearow/juice/tree/master/rcudnn"
readme = "../README.md"
keywords = ["cudnn", "cuda", "nvidia", "neural-network"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
rcudnn-sys = { version = "0.4", path = "../cudnn-sys" }
num = "0.1"
clippy = { version = "0.0.302", optional = true }

[dev-dependencies]
coaster = { default-features = false, features = ["native", "cuda"], version = "0.1" }

[features]
dev = []
travis = []
lint = ["clippy"]
